adminn Apis completed
